fixing submit button on iPhones

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -266,8 +266,8 @@ textarea {
 .submit-button {border: #626567;
                 border-width: 2px;
                 border-radius: 2px;
-                width: 40px;
-                padding-bottom: 2px;
+                width: 50px;
+                padding-bottom: 3px;
                }
 
 .form-text {font-family: 'Lato', sans-serif;
